# yew-todo-app

./: .gitignore  Cargo.toml  LICENSE  README.md  bonnie.toml  build.rs  index.html  tailwind.config.js
.github/: SECURITY.md
src/: error.rs  main.rs  prelude.rs  routes.rs  switch.rs
src/app/: app_component.rs  mod.rs
src/app/components/: mod.rs
src/app/components/dashboard/: _component.rs  mod.rs
src/app/components/login/: _component.rs  mod.rs
src/app/components/not_found/: _component.rs  mod.rs
src/app/components/register/: _component.rs  mod.rs
src/app/components/shared/: mod.rs
src/app/components/shared/footer/: _component.rs  mod.rs
src/app/components/shared/header/: _component.rs  mod.rs
src/app/states/: app_state.rs
src/config/: app_config.rs  mod.rs
